--- a/README.adoc
+++ b/README.adoc
@@ -174,4 +174,4 @@ The https://spring.io/[spring.io] site contains several guides that show how to 
 
 
 == License
-Spring Boot is Open Source software released under the https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 license].
+Spring Boot is licensed under [GNU General Public License v3.0](LICENSE).
